Phase_02A_Wave_E_Issue_Fix